# SudokuSolver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
docs/: ACKNOWLEDGEMENTS.md  CHANGELOG.md
docs/doxygen-html/: index.html
scripts/: exec.sh  execClang.sh  execNinja.sh
scripts/cmake/: Testing.cmake
